# Agentic-Stock-Trader

./: .dockerignore  .gitignore  DECISIONS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: deployment.md  improvements.md  operations.md  running-locally.md
examples/: advisories_last_2_days.txt  check_model.py  export_advisories.py  export_runs.py  paper_runs_last_2_days.txt  paper_smoke.py  run_backtest.py  run_local.py  sample_runs.txt  simulate_runs.py  strategy_config.example.json
infra/: app.py  cdk.json
infra/trading_bot_infra/: __init__.py  stack.py
src/trading_bot/: __init__.py  config_loader.py  engine.py  market_calendar.py  runner.py
src/trading_bot/aws/: __init__.py  handler.py  secrets.py
src/trading_bot/backtest/: __init__.py  harness.py
src/trading_bot/broker/: __init__.py  alpaca.py  base.py  credentials.py  errors.py  fake.py  ids.py
src/trading_bot/data/: __init__.py  alpaca_data.py
src/trading_bot/domain/: __init__.py  config.py  decisions.py  market_state.py
src/trading_bot/indicators/: __init__.py  compute.py
src/trading_bot/reasoning/: __init__.py  advisor.py  assembly.py  graph.py  llm.py  openrouter.py  providers.py  tot.py  veto.py
src/trading_bot/state/: __init__.py  dynamodb.py  errors.py  memory.py  models.py  reconcile.py  repository.py
src/trading_bot/strategy/: __init__.py  base.py  force.py  momentum.py
tests/: conftest.py  test_aws_handler.py  test_aws_secrets.py  test_backtest.py  test_broker_alpaca.py  test_broker_credentials.py  test_broker_fake.py  test_broker_ids.py  test_config.py  test_config_loader.py  test_decisions.py  test_engine.py  test_force_entry.py  test_indicators.py  test_infra_stack.py  test_market_calendar.py  test_reasoning_graph.py  test_reasoning_tot.py  test_reasoning_veto.py  test_reconcile.py  test_runner.py  test_state_dynamodb.py  test_state_memory.py  test_strategy.py
