[project]
name = "trading-bot"
version = "0.1.0"
description = "Intraday agentic QQQ/PSQ trading bot (Alpaca + AWS Lambda + LangGraph)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pydantic>=2.7",
]

# Heavier / phase-specific deps are kept out of the default install so the
# pure-local strategy + backtest layer stays fast to set up and dependency-light.
# Install with: uv sync --extra <name>
[project.optional-dependencies]
broker = [
    "alpaca-py>=0.21",
]
aws = [
    "boto3>=1.34",
]
reasoning = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "langgraph>=0.2",
    "langchain-core>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
files = ["src", "tests", "examples"]
warn_unused_configs = true

# pandas/numpy chained operations return Any in many places; relax return-type
# strictness in the two pandas-heavy modules so the checker stays useful on the
# pure-logic code (domain/strategy) without drowning in library noise.
[[tool.mypy.overrides]]
module = ["trading_bot.indicators.compute", "trading_bot.backtest.harness"]
warn_return_any = false
disallow_any_generics = false

# pandas does not ship type information mypy can use; treat it as untyped rather
# than depending on the separately-versioned pandas-stubs.
[[tool.mypy.overrides]]
module = ["pandas"]
ignore_missing_imports = true

# alpaca-py is an optional extra and imported lazily; don't require it for type
# checking. The adapter isolates all SDK access behind the Broker protocol.
[[tool.mypy.overrides]]
module = ["alpaca.*"]
ignore_missing_imports = true

# boto3 is an optional extra, imported lazily; the DynamoDB adapter isolates it.
[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore.*"]
ignore_missing_imports = true

# langgraph + httpx (reasoning extra) are isolated behind the reasoning modules.
# langgraph ships its own (very strict, overload-heavy) types; skip analyzing it
# and treat its surface as Any rather than fighting the StateGraph overloads.
[[tool.mypy.overrides]]
module = ["langgraph.*"]
follow_imports = "skip"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["httpx"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# Q = flake8-quotes: enforce single quotes for string literals ('SELL' not "SELL").
select = ["E", "F", "I", "UP", "B", "Q"]

[tool.ruff.lint.flake8-quotes]
# Inline string literals use single quotes ('SELL' not "SELL").
inline-quotes = "single"
# Triple-quoted strings stay double — required for formatter compatibility and PEP 257.
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.format]
quote-style = "single"
